--- a/generals/pyproject.toml
+++ b/generals/pyproject.toml
@@ -8,6 +8,8 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "numpy (>=2.2.5,<3.0.0)",
+    "torch (>=2.7.0,<3.0.0)"
 ]
 
 [tool.poetry]
